--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Agustin-De-Marco/TP4-MODULARIZACION-OTERO-KANTER#readme",
   "dependencies": {
-    "node-modules": "^1.0.1"
+    "node-modules": "^1.0.1",
+    "tp4": "file:"
   }
 }
